ITPRO-86 New feature to always print debug info about auto placement Enable [lml]verbose_auto_placement for this feature.

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -205,6 +205,8 @@ failoninvalidforceboot=1
 # It seems like LWP ignores the no_proxy setting for HTTPS. ATM the only workaround seems to be to
 # disable proxy settings globally.
 disableproxy=0
+# should we dump placement and filtering debug output
+verbose_auto_placement=0
 
 [triggers]
 # run this optional command after deleting a VM. Keys from LML::Lab are replaced if they are in the %%%TOKEN%%% form
