ITPRO-86 Make extra link text customizable, closes #25 Also remove GECOS lookup for VM Overview because the lookup is rather slow on LDAP-backed servers. If we want to show more than the username then we should write it in LML::Lab::update_vm so that we do the expensive calculation only once and not on each user viewing the VM list.

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -30,6 +30,11 @@ EOF
 # The GUI should filter the VM path, () denotes the part displayed to the user
 # this removes the leading <datacenter-name>/vm>/ stuff from the display name
 display_filter_vm_path=^[^/]+/vm(.*)$
+# Content of the <a>...</a> extra link that points to http://CLIENT_IP
+# The link is shown while the VM is in force boot mode and we use this
+# to link to the Kickstart Debugger (http://github.com/ImmobilienScout24/kickstart-debugger)
+# which runs on our systems during provisioning. You could also put an image there (<img src=... />).
+extra_link_text=Kickstart Debugger
 
 # define a list of variables here. The pxelinux-proxy.pl script will take the KEY as
 # the name of the TOKEN (in *.pxelinux files) and the VALUE as the token replacement
