ITPRO-86 Vastly improved error message in case auto placement fails.

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -268,19 +268,29 @@ forceboot_target_field=Force Boot Target
 # if it is not set, then LML will try to guess it.
 
 [network_assignment]
-# List of permitted VM name regex patterns for each network label. Patterns are case-sensitive and used in qr() as-is.
+# List of permitted VM name regex patterns for each network label. Patterns are case-sensitive and used in qr(^<pattern>$).
 # Example:
 # ARC_NETWORK=<<EOF
-# ^is24
+# is24.*
 # EOF
-# ARC_BACKUP_NETWORK=^backup.*
+# ARC_BACKUP_NETWORK=backup.*
+# ARC_NETWORK_FE=.*web\d+
 
 [new_vm]
 # List of configured network assignments. This list describes the search order for vm network
-# assignment. The assignment which has the first hit, will take precedence.
+# assignment. The assignment which has the first hit matching the vm name patterns in [network_assignment]
+# will take precedence.
 network_search_order=<<EOF
 ARC_NETWORK
 ARC_BACKUP_NETWORK
+EOF
+
+# Suffix identifier for the second interface. This value will be append to the network label of the
+# first interface. The resulting name should represend the network label of the second interface
+2nd_interface_suffix=_FE
+
+# Hostrule patterns for that hosts, which should get an second interface
+2nd_interface=<<EOF
 EOF
 
 [vm_spec]
