ITPRO-86 New Feature to limit the expiration date, default is 1000 days

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -257,6 +257,8 @@ contactuserid_minuid=1000
 expires_field=Expires
 # use european date format for expiry date field
 expires_european=1
+# maximum expiration in days - fail VMs that expire too far in the future.
+expires_maximum=1000
 # Define a field that contains info about forced PXE boots (ON|OFF)
 forceboot_field=Force Boot
 # Define a field where the target for the forceboot is given
