ITPRO-86 New Feature to ignore, allow and deny VMs by VM Path

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -264,6 +264,16 @@ forceboot_field=Force Boot
 # Define a field where the target for the forceboot is given
 forceboot_target_field=Force Boot Target
 
+# VMs in a VM path matching one of the following patterns will always be treated with othervm_redirect
+# Default is empty to not ignore any VM path. Patterns are matched case insensitive by qr(^...$)i.
+ignore_paths=
+
+# VMs must be in one of allow_paths pattern and may not be in any of deny_paths patterns.
+# Patterns are matched case insensitive by qr(^...$)i
+# Default is allow all and deny none
+allow_paths=.*
+deny_paths=
+
 [http]
 # here you can set some options for http
 # base_url= can be set to the http://<host>/<path> that should be prefixed to all LML scripts
