Generalizing first path part

--- a/src/apache/lab-manager-light.conf
+++ b/src/apache/lab-manager-light.conf
@@ -4,8 +4,8 @@
 
 RewriteEngine   on
 RewriteCond     %{REQUEST_FILENAME} !-f
-RewriteRule     /pxe/pxelinux.cfg/([^-]{8}-.*-.*-.*)$ /lml/pxelinux.pl?uuid=$1 [PT]
-RewriteRule     ^(/pxe/(?:(?:.*\.pxelinux)|(?:pxelinux.cfg/default)))$ /lml/pxelinux-proxy.pl?filename=$1&%{QUERY_STRING} [PT]
+RewriteRule     /[^\/]+/pxelinux.cfg/([^-]{8}-.*-.*-.*)$ /lml/pxelinux.pl?uuid=$1 [PT]
+RewriteRule     ^(/[^\/]+/(?:(?:.*\.pxelinux)|(?:pxelinux.cfg/default)))$ /lml/pxelinux-proxy.pl?filename=$1&%{QUERY_STRING} [PT]
 
 <IfModule mpm_prefork_module>
         <IfModule !cgi_module>
