Fix small typos

--- a/doc/examples/lml-system-test.ini
+++ b/doc/examples/lml-system-test.ini
@@ -16,12 +16,12 @@ lmlhostpattern          = regex-of-LML-server(s)
 [create vm with static FG in static network and force boot]
 result              = qrdata
 # if no expect key is given, only the static inferable attributes like qr-code-age, 
-# vm_path (folder), lml_host, vm_uuid, host, host_name, contact user and expiration  date are verified 
+# vm_path (folder), lml_host, vm_uuid, host, host_name, contact user and expiration date are verified 
 
 [create vm with dynmaic FG in dynamic network and force boot]
 result              = qrdata
 vm_name_prefix      = some_test_vm_prefix
-# verify the only one nic for our dynamic network was assigned
+# verify that only one nic for our dynamic network was assigned
 expect = <<EOF
 .*"MAC"\s*:\s*{\s+.*\s*[^}]*"dynamic_network_label"\s+}.*
 EOF
