--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -257,6 +257,11 @@ contactuserid_minuid=1000
 expires_field=Expires
 # use european date format for expiry date field
 expires_european=1
+# define networks to whitelist from expiry
+expires_whitelist_networks= <<EOF
+intern1.example
+intern2.example
+EOF
 # maximum expiration in days - fail VMs that expire too far in the future.
 expires_maximum=1000
 # Define a field that contains info about forced PXE boots (ON|OFF)
