Add vmcreate cmd trigger

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -218,6 +218,8 @@ verbose_auto_placement=0
 # default is disabled, this is an example
 # vmdestroy=curl http://host/sys/destroy/%%%NAME%%%.%%%DNS_DOMAIN%%%
 # vmdetonate=curl http://host/sys/detonate/%%%NAME%%%.%%%DNS_DOMAIN%%%
+# CONSIDER: %%%CLIENT_IP%%%, %%%DNS_DOMAIN%%% and %%%CUSTOMFIELDS%%% are not available on vmcreate
+# vmcreate=curl http://host/sys/create/%%%NAME%%%
 
 [vmscreenshot]
 # enable vmscreenshot.pl
