--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -101,7 +101,7 @@ menu vshift 5
 #menu rows 13
 
 label dummy
-        menu label 
+        menu label
         kernel bin/reboot.c32
 
 ui bin/vesamenu.c32
@@ -196,7 +196,7 @@ EOF
 
 [modifyvm]
 # modify the VM so that it can boot only via PXE
-forcenetboot=1
+prefernetboot=1
 
 [lml]
 # where to keep lml internal data
