Revert "SE-1320: Only rely on netboot is a bad idea, when the LML server is not available. So give an fallback to hdd"
This reverts commit 02c724090ff583923d98cae37bc9a5b9e3e37e66.

Conflicts:
	test/unit/04-VM.t

--- a/src/lml/default.conf
+++ b/src/lml/default.conf
@@ -101,7 +101,7 @@ menu vshift 5
 #menu rows 13
 
 label dummy
-        menu label
+        menu label 
         kernel bin/reboot.c32
 
 ui bin/vesamenu.c32
@@ -196,7 +196,7 @@ EOF
 
 [modifyvm]
 # modify the VM so that it can boot only via PXE
-prefernetboot=1
+forcenetboot=1
 
 [lml]
 # where to keep lml internal data
